# geodesic-hyperspheres

./: .gitignore  CMakeLists.txt  README.md
hypersphere_svm/: hypersphere.py
include/: mesh.h
src/: main.cpp
